--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,16 @@
     <title>Home Page</title>
   </head>
   <body>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172958383-1"></script>
+    <script>
+      {window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-172958383-1');}
+    </script>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
